added timer feature , added more questions (100 total)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <header class="quiz-header">
         <h1>Quizzy</h1>
         <p class="progress" id="progress">1/10</p>
+        <h1 id="timer" class="timer">20</h1>
+        <!-- <button class="next-btn" onclick="startTimer()">Start</button> -->
       </header>
 
       <section class="quiz-body">
